force-app/main/default/objects/TriggersOfAwesome__mdt/TriggersOfAwesome__mdt.object-meta.xml
<CustomObject>
    <label>TriggersOfAwesome</label>
    <pluralLabel>TriggersOfAwesomeness</pluralLabel>
</CustomObject>