force-app/main/default/objects/TriggersOfAwesome__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <description>Level of Awesomeness</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>