force-app/main/default/objects/TriggersOfAwesome__mdt/fields/sObjectType__c.field-meta.xml
<CustomField>
    <fullName>sObjectType__c</fullName>
    <label>sObjectType</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>